--- a/TaxiCentral/app/src/main/res/layout/activity_navigation.xml
+++ b/TaxiCentral/app/src/main/res/layout/activity_navigation.xml
@@ -21,15 +21,15 @@
         android:layout_below="@+id/infoRouteTextView"
         android:text="FutureState"
         android:textStyle="bold"/>
-<!--
+
     <Button
-        android:id="@+id/goToButton"
+        android:id="@+id/arrivalButton"
         style="?android:textAppearanceSmall"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_below="@+id/autoCompleteTextViewAddresses"
-        android:text="Go To"
+        android:layout_marginTop="25dp"
+        android:layout_marginLeft="75dp"
+        android:text="Arrival"
         android:textStyle="bold"/>
--->
+
 </fragment>
